# PaddleOCR-MLX

./: .gitignore  README.md  pyproject.toml
.claude/: CLAUDE.md
.claude-plugin/: plugin.json
mlx_ppocr/: __init__.py  cli.py  convert.py  pdf.py  pipeline.py
mlx_ppocr/models/: det_model.py  rec_model.py
mlx_ppocr/models/backbone/: pphgnetv2.py  pplcnetv3.py
mlx_ppocr/models/encoder/: svtr.py
mlx_ppocr/models/head/: ctc_head.py  pf_head.py
mlx_ppocr/models/neck/: lkpan.py
mlx_ppocr/processing/: det_postprocess.py  det_preprocess.py  rec_postprocess.py  rec_preprocess.py
mlx_ppocr/utils/: ops.py
skills/ocr/: SKILL.md
skills/ocr/scripts/: batch_ocr.py
tests/: conftest.py  test_cli.py  test_convert.py  test_det_postprocess.py  test_det_preprocess.py  test_pdf.py  test_rec_postprocess.py  test_rec_preprocess.py  test_utils.py
